# zed

crates/git/src/: repository.rs
crates/git_ui/src/: compare_view.rs  git_graph.rs  git_ui.rs
crates/project/src/: git_store.rs
zed-edit-proxy/: Dockerfile  README.md  config-ollama.yaml  config-vllm.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_proxy.py
